      occurs. (bugzilla #312)
    * When performing an update of a group that adds a trove foo,
      search the system for a older version of foo to replace if the
      original update command found a replacement by searching the
      system.
    * New option, "conary update-conary" has been added in an attempt
      to provide a workaround for future drastic protocol revisions
      such as what happened for 0.70

  o Build Changes (cvc)
    * cvc more reliably sets a non-zero exit status when an error
      occurs. (bugzilla #312)
    * Building groups w/ autoResolve displays the revision of the
      troves which are being included
    * The change to automatically split up hardlink groups into
      per-directory hardlink groups has been reverted.  Instead,
      Conary enforces that link groups do not cross directories, but
      provides an exception mechanism for the rare cases where it is
      appropriate to do so.  The old LinkCount policy was renamed
      LinkType, and the new policy enforcing link group directory
      counting is now called LinkCount.
    * The NormalizeCompression policy no longer causes an error if you
      have two files in the filesystem that differ only by the .gz or
      .bz2 extension.
    * The Provides policy will not longer automatically provide soname
      dependencies for executable files that provide sonames.  A few
      executables do provide sonames, and 0.70.1 provided them as
      harmless extraneous provisions.

   o Repository Changes
     * A new getConaryUrl() method has been implemented to support the
       "conary update-conary" feature
     * Exception handling has been re-worked.  All exception classes
       that are marshaled back to the client are now in the
       repository.errors module.  Some of the most commonly used
       exception classes have been included in their previous modules
       for compatibility until code can be modified to use the new
       repository.errors module.
